# 4D-cube

./: .cursorignore  .gitignore  AGENTS.md  CMakeLists.txt  README.md  main.cpp  math_4d.cpp  math_4d.h  projection_4d.cpp  projection_4d.h  renderer.cpp  renderer.h  rubik_cube.cpp  rubik_cube.h  tesseract_model.cpp  tesseract_model.h  test_tesseract.cpp
